# fft_bench

./: .gitignore  Cargo.toml  README.md  run_bench.sh
result/: AMD_Ryzen_7_1800X.txt  Raspberry_Pi_3_Model_B.txt
src/: main.rs
