[package]
name = "fft_bench"
version = "0.1.0"
authors = ["zuntansan"]
edition = "2018"
description = "Benchmark using FFT"
readme = "README.md"
homepage = "https://github.com/zuntan/mpdsh"
repository = "https://github.com/zuntan/mpdsh"
license = "MIT OR Apache-2.0"
keywords = [ "fft", "benchmark" ]
categories = [ "command-line-interface" ]

[dependencies]
pretty_env_logger = "0.4.0"
log         = "0.4.8"
num-traits  = "0.2"
num-complex = "0.3.0"
chfft       = "0.3.4"
chrono      = "0.4"
getopts     = "0.2"
hound       = "3.4.0"

